--- a/style.css
+++ b/style.css
@@ -5,3 +5,27 @@
 * {
   margin: 0;
 }
+
+body{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.board-container {
+  height: 80vh;
+  width: 80vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+}
+
+.game-cell {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+}
